--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node src/main.ts",
     "build": "tsc",
+    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:prod": "node dist/src/main.js",
     "pm2": "pm2 start ecosystem.config.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
@@ -25,6 +26,7 @@
     "@nestjs/mongoose": "^11.0.4",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.10",
+    "@nestjs/serve-static": "^5.0.4",
     "@nestjs/throttler": "^6.5.0",
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.13.2",
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@nestjs/cli": "^11.0.14",
     "@types/express": "^5.0.6",
     "@types/lodash": "^4.17.21",
     "@types/node": "^25.0.3",
@@ -61,8 +64,13 @@
     "pino-pretty": "^13.1.3",
     "pre-commit": "^1.2.2",
     "prettier": "^3.0.3",
+    "run-script-webpack-plugin": "^0.2.3",
+    "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "webpack": "^5.104.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "config": {
     "commitizen": {
