--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "formidable": "^3.5.4",
+    "helmet": "^8.1.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.20.4",
     "nestjs-pino": "^4.5.0",
